--- a/src/pages/home/index.wxml
+++ b/src/pages/home/index.wxml
@@ -1,11 +1,12 @@
 <!-- index.wxml -->
 <view class="main">
   <van-cell title="商铺信息设置" is-link url="/pages/merInfo/index" />
-  <van-cell title="商品添加" is-link url="/pages/productAdd/index" />
+  <van-cell title="商品添加" is-link url="/pages/productEdit/index" />
   <van-cell title="商品管理" is-link url="/pages/productManage/index" />
-  <i-grid>
+  <van-cell title="订单管理" is-link url="/pages/orderManage/index" />
+  <!-- <i-grid>
     <i-grid-item>InfoManage</i-grid-item>
     <i-grid-item>ProductManage</i-grid-item>
-  </i-grid>
+  </i-grid> -->
   <!-- <i-icon type="activity" size="28" color="#80848f" /> -->
 </view>
