--- a/src/pages/merInfo/index.scss
+++ b/src/pages/merInfo/index.scss
@@ -2,23 +2,32 @@
   .basic-info-images {
     .basic-info-images-guid {
       .grid-item {
-        .item-images-block {
-          .item-images {
-            width: 100%;
-            height: 220rpx;
-            //margin-top: 50rpx;
-          }
-          .close {
-            position: absolute;
-            right: 0px;
-            bottom: 0px;
-            width: 100%;
-            // float: right;
-            // display: inline-block;
-          }
+        margin: 0;
+        padding: 0;
+        border: none;
+        height: 277rpx;
+        .item-images {
+          width: 95%;
+          height: 222rpx;
+        }
+        .close {
+          //position: absolute;
+          right: 0px;
+          bottom: 0px;
+          width: 95%;
+          height: 50rpx;
+          margin-top: 5rpx;
+        }
+        .grid-item-empty {
+          width: 95%;
+          height: 100%;
+        }
+        .grid-item-add {
+          background-color: #fff;
+          width: 95%;
+          height: 100%;
+          position: relative;
           .add {
-            // width: 100%;
-            // height: 100%;
             position: absolute;
             top: 0;
             bottom: 0;
@@ -27,32 +36,53 @@
             height: 50rpx;
             width: 50rpx;
             margin: auto;
-            // top: 50%;
-            // left:50%;
-            // height: 30%;
-            // width: 50%;
-            // margin: -15% 0 0 -25%;
-            // overflow: auto;
           }
-          width: 30%;
-          height: 222rpx;
-          margin-top: 10rpx;
-          padding-bottom: 50rpx;
-          position: relative;
-          display: inline-flex;
-          margin-left: 20rpx;
         }
-        .item-images-block-add {
-          background-color: #fff;
-        }
-        .item-images-block-add:active {
+
+        .grid-item-add:active {
           background-color: #f2f3f5;
         }
-        margin: 0;
-        padding: 0;
+        // .item-images-block {
+        //   width: 30%;
+        //   height: 277rpx;
+        //   // margin-top: 10rpx;
+        //   position: relative;
+        //   display: inline-flex;
+        //   justify-content: start;
+        //   place-content: start center;
+        //   margin-left: 20rpx;
+        //   .item-images {
+        //     width: 100%;
+        //     height: 222rpx;
+        //   }
+        //   .close {
+        //     position: absolute;
+        //     right: 0px;
+        //     bottom: 0px;
+        //     width: 100%;
+        //     height: 50rpx;
+        //     margin-top: 5rpx;
+        //   }
+        //   .add {
+        //     position: absolute;
+        //     top: 0;
+        //     bottom: 0;
+        //     right: 0;
+        //     left: 0;
+        //     height: 50rpx;
+        //     width: 50rpx;
+        //     margin: auto;
+        //   }
+        // }
+        // .item-images-block-add {
+        //   background-color: #fff;
+        // }
+        // .item-images-block-add:active {
+        //   background-color: #f2f3f5;
+        // }
       }
     }
-    margin-bottom: 30rpx;0
+    margin-bottom: 30rpx;
   }
 
   .address-region {
