--- a/src/pages/productEdit/index.scss
+++ b/src/pages/productEdit/index.scss
@@ -2,44 +2,84 @@
   .basic-info-images {
     .basic-info-images-guid {
       .grid-item {
-        .item-images-block {
-          .item-images {
-            width: 100%;
-            height: 220rpx;
-            //margin-top: 50rpx;
-          }
-          .close {
-            position: absolute;
-            right: 0px;
-            bottom: 0px;
-            width: 100%;
-            // float: right;
-            // display: inline-block;
-          }
-          .add {
-            // width: 100%;
-            // height: 100%;
-            position: absolute;
-            top: 50%;
-            left: 35%;
-            // overflow: auto;
-          }
-          width: 30%;
-          height: 222rpx;
-          margin-top: 10rpx;
-          padding-bottom: 50rpx;
-          position: relative;
-          display: inline-flex;
-          margin-left: 20rpx;
-        }
-        .item-images-block-add {
-          background-color: #fff;
-        }
-        .item-images-block-add:active {
-          background-color: #f2f3f5;
-        }
         margin: 0;
         padding: 0;
+        border: none;
+        height: 277rpx;
+        .item-images {
+          width: 95%;
+          height: 222rpx;
+        }
+        .close {
+          //position: absolute;
+          right: 0px;
+          bottom: 0px;
+          width: 95%;
+          height: 50rpx;
+          margin-top: 5rpx;
+        }
+        .grid-item-empty {
+          width: 95%;
+          height: 100%;
+        }
+        .grid-item-add {
+          background-color: #fff;
+          width: 95%;
+          height: 100%;
+          position: relative;
+          .add {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            height: 50rpx;
+            width: 50rpx;
+            margin: auto;
+          }
+        }
+
+        .grid-item-add:active {
+          background-color: #f2f3f5;
+        }
+        // .item-images-block {
+        //   width: 30%;
+        //   height: 277rpx;
+        //   // margin-top: 10rpx;
+        //   position: relative;
+        //   display: inline-flex;
+        //   justify-content: start;
+        //   place-content: start center;
+        //   margin-left: 20rpx;
+        //   .item-images {
+        //     width: 100%;
+        //     height: 222rpx;
+        //   }
+        //   .close {
+        //     position: absolute;
+        //     right: 0px;
+        //     bottom: 0px;
+        //     width: 100%;
+        //     height: 50rpx;
+        //     margin-top: 5rpx;
+        //   }
+        //   .add {
+        //     position: absolute;
+        //     top: 0;
+        //     bottom: 0;
+        //     right: 0;
+        //     left: 0;
+        //     height: 50rpx;
+        //     width: 50rpx;
+        //     margin: auto;
+        //   }
+        // }
+        // .item-images-block-add {
+        //   background-color: #fff;
+        // }
+        // .item-images-block-add:active {
+        //   background-color: #f2f3f5;
+        // }
       }
     }
     margin-bottom: 30rpx;
