--- a/src/pages/productEdit/index.wxss
+++ b/src/pages/productEdit/index.wxss
@@ -6,41 +6,47 @@
 .basic-info .basic-info-images .basic-info-images-guid .grid-item {
   margin: 0;
   padding: 0;
+  border: none;
+  height: 277rpx;
 }
 
-.basic-info .basic-info-images .basic-info-images-guid .grid-item .item-images-block {
-  width: 30%;
+.basic-info .basic-info-images .basic-info-images-guid .grid-item .item-images {
+  width: 95%;
   height: 222rpx;
-  margin-top: 10rpx;
-  padding-bottom: 50rpx;
-  position: relative;
-  display: inline-flex;
-  margin-left: 20rpx;
 }
 
-.basic-info .basic-info-images .basic-info-images-guid .grid-item .item-images-block .item-images {
-  width: 100%;
-  height: 220rpx;
-}
-
-.basic-info .basic-info-images .basic-info-images-guid .grid-item .item-images-block .close {
-  position: absolute;
+.basic-info .basic-info-images .basic-info-images-guid .grid-item .close {
   right: 0px;
   bottom: 0px;
-  width: 100%;
+  width: 95%;
+  height: 50rpx;
+  margin-top: 5rpx;
 }
 
-.basic-info .basic-info-images .basic-info-images-guid .grid-item .item-images-block .add {
-  position: absolute;
-  top: 50%;
-  left: 35%;
+.basic-info .basic-info-images .basic-info-images-guid .grid-item .grid-item-empty {
+  width: 95%;
+  height: 100%;
 }
 
-.basic-info .basic-info-images .basic-info-images-guid .grid-item .item-images-block-add {
+.basic-info .basic-info-images .basic-info-images-guid .grid-item .grid-item-add {
   background-color: #fff;
+  width: 95%;
+  height: 100%;
+  position: relative;
 }
 
-.basic-info .basic-info-images .basic-info-images-guid .grid-item .item-images-block-add:active {
+.basic-info .basic-info-images .basic-info-images-guid .grid-item .grid-item-add .add {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  height: 50rpx;
+  width: 50rpx;
+  margin: auto;
+}
+
+.basic-info .basic-info-images .basic-info-images-guid .grid-item .grid-item-add:active {
   background-color: #f2f3f5;
 }
 
