--- a/src/pages/productEdit/index.scss
+++ b/src/pages/productEdit/index.scss
@@ -1,6 +1,9 @@
 .basic-info {
   .basic-info-images {
     .basic-info-images-guid {
+      margin-top: 30rpx;
+      background-color: #fff;
+      border: 0;
       .grid-item {
         margin: 0;
         padding: 0;
@@ -38,7 +41,6 @@
             margin: auto;
           }
         }
-
         .grid-item-add:active {
           background-color: #f2f3f5;
         }
@@ -84,6 +86,91 @@
     }
     margin-bottom: 30rpx;
   }
+  // .basic-info-images {
+  //   .basic-info-images-guid {
+  //     .grid-item {
+  //       margin: 0;
+  //       padding: 0;
+  //       border: none;
+  //       height: 277rpx;
+  //       .item-images {
+  //         width: 95%;
+  //         height: 222rpx;
+  //       }
+  //       .close {
+  //         //position: absolute;
+  //         right: 0px;
+  //         bottom: 0px;
+  //         width: 95%;
+  //         height: 50rpx;
+  //         margin-top: 5rpx;
+  //       }
+  //       .grid-item-empty {
+  //         width: 95%;
+  //         height: 100%;
+  //       }
+  //       .grid-item-add {
+  //         background-color: #fff;
+  //         width: 95%;
+  //         height: 100%;
+  //         position: relative;
+  //         .add {
+  //           position: absolute;
+  //           top: 0;
+  //           bottom: 0;
+  //           right: 0;
+  //           left: 0;
+  //           height: 50rpx;
+  //           width: 50rpx;
+  //           margin: auto;
+  //         }
+  //       }
+
+  //       .grid-item-add:active {
+  //         background-color: #f2f3f5;
+  //       }
+  //       // .item-images-block {
+  //       //   width: 30%;
+  //       //   height: 277rpx;
+  //       //   // margin-top: 10rpx;
+  //       //   position: relative;
+  //       //   display: inline-flex;
+  //       //   justify-content: start;
+  //       //   place-content: start center;
+  //       //   margin-left: 20rpx;
+  //       //   .item-images {
+  //       //     width: 100%;
+  //       //     height: 222rpx;
+  //       //   }
+  //       //   .close {
+  //       //     position: absolute;
+  //       //     right: 0px;
+  //       //     bottom: 0px;
+  //       //     width: 100%;
+  //       //     height: 50rpx;
+  //       //     margin-top: 5rpx;
+  //       //   }
+  //       //   .add {
+  //       //     position: absolute;
+  //       //     top: 0;
+  //       //     bottom: 0;
+  //       //     right: 0;
+  //       //     left: 0;
+  //       //     height: 50rpx;
+  //       //     width: 50rpx;
+  //       //     margin: auto;
+  //       //   }
+  //       // }
+  //       // .item-images-block-add {
+  //       //   background-color: #fff;
+  //       // }
+  //       // .item-images-block-add:active {
+  //       //   background-color: #f2f3f5;
+  //       // }
+  //     }
+  //   }
+  //   margin-bottom: 30rpx;
+  // }
   .t-richtext {
     min-height: 500rpx;
     background-color: #fff;
