--- a/src/pages/productEdit/index.wxss
+++ b/src/pages/productEdit/index.wxss
@@ -5,7 +5,6 @@
 
 .basic-info .basic-info-images .basic-info-images-guid {
   margin-top: 30rpx;
-  /* background-color: #fff; */
   border: 0;
 }
 
@@ -58,6 +57,8 @@
 
 .basic-info .t-richtext {
   min-height: 500rpx;
+  margin-left: 10rpx;
+  margin-right: 10rpx;
   background-color: #fff;
 }
 
@@ -214,7 +215,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  /*水平居中*/
+  /*æ°´å¹³å±…ä¸­*/
   background-color: #fff;
 }
 
@@ -254,4 +255,8 @@
 
 .ql-container {
   height: 100%;
+}
+
+.content-edit {
+  margin-top: 20rpx;
 }
